--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,3 +38,21 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+
+#redes-sociais {
+    text-align: center;
+}
+
+#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.438);
+}
+
+#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.616);
+    transform: scale(1.1, 1.1);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.438);
+    transition: .4s;
+}
